[gd_scene format=3 uid="uid://ja87ubeb3t44"]

[ext_resource type="Texture2D" uid="uid://dr6ehcecdwbir" path="res://Images/prototype art that we will not use in the final build/cat.png" id="1_4drwd"]
[ext_resource type="Script" uid="uid://db8aisup6xpsj" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/player_state_handler.gd" id="1_oijlg"]
[ext_resource type="Script" uid="uid://6uhy5s6vb8xv" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/idle_state.gd" id="3_vr61t"]
[ext_resource type="Script" uid="uid://cujo6frcx3tbw" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/dash_state.gd" id="4_jkhb6"]
[ext_resource type="Script" uid="uid://ccody8gnos5eo" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/move_state.gd" id="5_pwx6j"]
[ext_resource type="Script" uid="uid://bip7x8vvk4jd" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/attack_state.gd" id="6_pwx6j"]
[ext_resource type="Script" uid="uid://14mfnnxegjy7" path="res://Scripts/prototype stuff/Player Prototype/State Machine Scripts/magic_state.gd" id="7_f8u88"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aiypd"]
radius = 34.0
height = 114.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pwx6j"]
radius = 34.0
height = 114.0

[node name="Player" type="CharacterBody2D" unique_id=1909083790]
motion_mode = 1
script = ExtResource("1_oijlg")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1743152657]
scale = Vector2(0.23339844, 0.22363286)
texture = ExtResource("1_4drwd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=550274425]
shape = SubResource("CapsuleShape2D_aiypd")

[node name="Hitbox" type="Area2D" parent="." unique_id=724517346]
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox" unique_id=1797335899]
polygon = PackedVector2Array(70, 69, 105, 32, 105, -35, 70, -70)

[node name="Hurtbox" type="Area2D" parent="." unique_id=1802615009]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=647800534]
shape = SubResource("CapsuleShape2D_pwx6j")

[node name="idle_state" type="Node" parent="." unique_id=1108578452]
script = ExtResource("3_vr61t")

[node name="dash_state" type="Node" parent="." unique_id=688587643]
script = ExtResource("4_jkhb6")

[node name="move_state" type="Node" parent="." unique_id=945448675]
script = ExtResource("5_pwx6j")

[node name="attack_state" type="Node" parent="." unique_id=1767612672]
script = ExtResource("6_pwx6j")

[node name="magic_state" type="Node" parent="." unique_id=265768770]
script = ExtResource("7_f8u88")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
